# cloud-sandbox-backstage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .terraform-docs.yml  .yamllint.yml  ARCHITECTURE.md  COMPONENT-TEMPLATE-INVENTORY.md  CONTAINER-STATUS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MODULE-PATTERN-ANALYSIS.md  Makefile  README.md  SETUP.md  TERRAFORM-COMPONENT-CREATION-SUMMARY.md  app-config.production.yaml  app-config.yaml  catalog-info.yaml  devbox.json  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.services-only.yaml  docker-compose.services.yaml  docker-compose.yaml  e2e-test-results.json  module-registry.yaml  package.json  playwright.config.ts  test-results.txt
.github/workflows/: build.yaml  ci.yml  codeql.yml  deploy.yaml  deploy.yml  docker-build.yaml  release.yaml  security-scan.yaml  terraform-docs.yml  terraform-security.yml  terraform-test.yml  terraform-validate.yml  test.yaml
catalog/: README.md  apis-and-resources.yaml  awx-core.yaml  awx-operator.yaml  awx-operator.yaml.bak  catalog-info.yaml  cloud-components.yaml  data-components.yaml  devops-domains.yaml  devops-systems.yaml  domains.yaml  infrastructure-components.yaml  mkdocs.yml  observability-components.yaml  sample-components.yaml  systems.yaml  testing-components.yaml  users.yaml
catalog/ansible-docker-host/: catalog-info.yaml  mkdocs.yml
catalog/ansible-webserver/: catalog-info.yaml  mkdocs.yml
catalog/apache-airflow/: catalog-info.yaml  mkdocs.yml
catalog/apache-kafka/: catalog-info.yaml  mkdocs.yml
catalog/apache-spark/: catalog-info.yaml  mkdocs.yml
catalog/artifact-repository/: catalog-info.yaml  mkdocs.yml
catalog/aws-services/: catalog-info.yaml  mkdocs.yml
catalog/awx-core/: catalog-info.yaml  mkdocs.yml
catalog/awx-helm-chart/: catalog-info.yaml  mkdocs.yml
catalog/awx-operator/: catalog-info.yaml  mkdocs.yml
catalog/azure-services/: catalog-info.yaml  mkdocs.yml
catalog/ci-cd-pipelines/: README.md  catalog-info.yaml  mkdocs.yml
catalog/cloudformation-templates/: catalog-info.yaml  mkdocs.yml
catalog/datadog-integration/: catalog-info.yaml  mkdocs.yml
catalog/docker-images/: README.md  catalog-info.yaml  mkdocs.yml
catalog/elasticsearch-data/: catalog-info.yaml  mkdocs.yml
catalog/elk-stack/: catalog-info.yaml  mkdocs.yml
catalog/gcp-services/: catalog-info.yaml  mkdocs.yml
catalog/helm-charts/: catalog-info.yaml  mkdocs.yml
catalog/jaeger-tracing/: catalog-info.yaml  mkdocs.yml
catalog/minio-storage/: catalog-info.yaml  mkdocs.yml
catalog/mongodb-cluster/: catalog-info.yaml  mkdocs.yml
catalog/multi-cloud-management/: catalog-info.yaml  mkdocs.yml
catalog/new-relic-integration/: catalog-info.yaml  mkdocs.yml
catalog/packer/: catalog-info.yaml  mkdocs.yml
catalog/pagerduty-integration/: catalog-info.yaml  mkdocs.yml
catalog/performance-testing/: catalog-info.yaml  mkdocs.yml
catalog/postgresql-cluster/: catalog-info.yaml  mkdocs.yml
catalog/prometheus-stack/: catalog-info.yaml  mkdocs.yml
catalog/pulumi-projects/: catalog-info.yaml  mkdocs.yml
catalog/rabbitmq-cluster/: catalog-info.yaml  mkdocs.yml
catalog/redis-cluster/: catalog-info.yaml  mkdocs.yml
catalog/sample-nodejs-api/: catalog-info.yaml  mkdocs.yml
catalog/sample-react-frontend/: catalog-info.yaml  mkdocs.yml
catalog/security-scanning-suite/: catalog-info.yaml  mkdocs.yml
catalog/sonarqube/: catalog-info.yaml  mkdocs.yml
catalog/splunk-enterprise/: catalog-info.yaml  mkdocs.yml
catalog/terraform-modules/: CATALOG-SETUP.md  IMPLEMENTATION-COMPLETE.md  all-components.yaml  aws-vpc.yaml  azure-vnet.yaml  catalog-info.yaml  gcp-vpc.yaml  mkdocs.yml  modules.yaml  validate-catalog.sh
catalog/testing-frameworks/: catalog-info.yaml  mkdocs.yml
catalog/zookeeper-ensemble/: catalog-info.yaml  mkdocs.yml
docker/: entrypoint.sh
docker/minio/: init.sh
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: init.sql
docker/rabbitmq/: definitions.json  rabbitmq.conf
docker/techdocs/: Dockerfile
docs/diagrams/: architecture-overview.d2  authentication-flow.d2  catalog-sync-flow.d2  deployment-docker.d2  readme-architecture.d2  scaffolding-flow.d2  security-auth-check.d2
docs/examples/: option-c-scaffolded-project.tf
scripts/: add-techdocs.py  create-catalog-info.py  extract-apis-resources.py  stack-down.sh  stack-up.sh
templates/: README.md
templates/ansible-docker/: template.yaml
templates/ansible-nginx/: template.yaml
templates/ansible-playbook/: mkdocs.yml  template.yaml
templates/app-nextjs/: mkdocs.yml  template.yaml
templates/app-nodejs-api/: mkdocs.yml  template.yaml
templates/app-springboot/: mkdocs.yml  template.yaml
templates/aws-cloudfront/: template.yaml
templates/aws-eks/: mkdocs.yml  (+1 more)
templates/data-airflow/skeleton/: README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml  requirements.txt
templates/data-airflow/skeleton/.github/workflows/: airflow.yaml
templates/data-airflow/skeleton/dags/: ${{ values.name }}_dag.py
templates/data-airflow/skeleton/dags/utils/: __init__.py
templates/data-airflow/skeleton/docs/: index.md
templates/data-airflow/skeleton/tests/: __init__.py  test_dag.py
templates/python-api/skeleton/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  catalog-info.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml
templates/python-api/skeleton/.github/workflows/: ci.yaml
templates/python-api/skeleton/alembic/: env.py
templates/python-api/skeleton/docs/: index.md
templates/python-api/skeleton/src/: __init__.py  config.py  main.py
templates/python-api/skeleton/src/api/routes/: __init__.py  auth.py  health.py  items.py
templates/python-api/skeleton/src/core/: database.py  logging.py
templates/python-api/skeleton/src/models/: item.py
templates/python-api/skeleton/src/schemas/: auth.py  item.py
templates/python-api/skeleton/tests/: conftest.py
templates/python-api/skeleton/tests/integration/: test_api.py
templates/python-api/skeleton/tests/unit/: test_schemas.py
(+1684 files in other folders)
