[project]
name = "${{ values.name }}"
version = "0.1.0"
description = "${{ values.description }}"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "DevOps Platform", email = "devops@company.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
{%- if values.database_type == 'postgresql' %}
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
{%- elif values.database_type == 'mysql' %}
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
{%- elif values.database_type == 'mongodb' %}
    "motor>=3.6.0",
    "beanie>=1.27.0",
{%- elif values.database_type == 'redis' %}
    "redis>=5.2.0",
{%- endif %}
{%- if values.enable_caching %}
    "redis>=5.2.0",
{%- endif %}
{%- if values.auth_type == 'jwt' %}
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
{%- elif values.auth_type == 'oauth2' %}
    "authlib>=1.3.2",
    "httpx>=0.28.0",
{%- endif %}
{%- if values.enable_rate_limiting %}
    "slowapi>=0.1.9",
{%- endif %}
{%- if values.enable_metrics %}
    "prometheus-fastapi-instrumentator>=7.0.0",
{%- endif %}
{%- if values.enable_logging %}
    "structlog>=24.4.0",
{%- endif %}
{%- if values.enable_background_tasks %}
    "celery>=5.4.0",
    "flower>=2.0.1",
{%- endif %}
{%- if values.message_queue == 'kafka' %}
    "aiokafka>=0.11.0",
{%- elif values.message_queue == 'rabbitmq' %}
    "aio-pika>=9.4.3",
{%- endif %}
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "orjson>=3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "mypy>=1.13.0",
    "ruff>=0.8.2",
    "pre-commit>=4.0.1",
    "bandit[toml]>=1.7.10",
    "safety>=3.2.10",
{%- if values.database_type in ['postgresql', 'mysql'] %}
    "pytest-alembic>=0.11.1",
{%- endif %}
]

[project.scripts]
${{ values.name | replace('-', '_') }} = "${{ values.name | replace('-', '_') }}.main:cli"

[project.urls]
Homepage = "https://github.com/${{ values.destination.owner }}/${{ values.destination.repo }}"
Documentation = "https://github.com/${{ values.destination.owner }}/${{ values.destination.repo }}#readme"
Repository = "https://github.com/${{ values.destination.owner }}/${{ values.destination.repo }}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/${{ values.name | replace('-', '_') }}"]

# ============================================
# Ruff - Linting and Formatting
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "Q",      # flake8-quotes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "S101",   # assert used (needed for tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004"]
"alembic/**/*.py" = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["${{ values.name | replace('-', '_') }}"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================
# MyPy - Type Checking
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================
# Pytest
# ============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================
# Bandit - Security
# ============================================
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used

# ============================================
# UV - Package Manager Settings
# ============================================
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "mypy>=1.13.0",
    "ruff>=0.8.2",
    "pre-commit>=4.0.1",
    "bandit[toml]>=1.7.10",
]
